--- a/assets/scss/_login.scss
+++ b/assets/scss/_login.scss
@@ -1,4 +1,6 @@
 #login {
+	width: 300px;
+	height: 300px;
 	padding: 50px;
 	input {
 		margin-bottom: 20px;
